// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`dialog rendered structure ConfirmDialog keeps destructive confirmations structurally equivalent while exposing alertdialog semantics 1`] = `
<div
  class="fixed inset-0 z-50 flex items-center justify-center overflow-hidden"
>
  <div
    aria-hidden="true"
    class="absolute inset-0 bg-black/50 transition-opacity backdrop-blur-sm"
  />
  <div
    aria-describedby="_r_5_"
    aria-labelledby="_r_4_"
    aria-modal="true"
    class="relative z-10 w-full max-w-md bg-white rounded-lg shadow-xl p-6 border border-gray-200"
    role="alertdialog"
  >
    <h2
      class="text-lg font-semibold mb-4"
      id="_r_4_"
    >
      Release funds
    </h2>
    <p
      class="text-sm text-gray-700 mb-6"
      id="_r_5_"
    >
      This action cannot be undone.
    </p>
    <div
      class="flex justify-end space-x-3"
    >
      <button
        class="px-4 py-2 rounded border border-gray-300 bg-white text-gray-700 hover:bg-gray-50 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-offset-2 focus-visible:ring-blue-500"
        type="button"
      >
        Cancel
      </button>
      <button
        class="px-4 py-2 rounded text-white focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-offset-2 bg-red-600 hover:bg-red-700 focus-visible:ring-red-500"
        type="button"
      >
        Confirm
      </button>
    </div>
  </div>
</div>
`;

exports[`dialog rendered structure ConfirmDialog renders no output while closed 1`] = `null`;

exports[`dialog rendered structure ConfirmDialog renders the loaded confirmation structure with its backdrop, labels, and actions 1`] = `
<div
  class="fixed inset-0 z-50 flex items-center justify-center overflow-hidden"
>
  <div
    aria-hidden="true"
    class="absolute inset-0 bg-black/50 transition-opacity backdrop-blur-sm"
  />
  <div
    aria-describedby="_r_3_"
    aria-labelledby="_r_2_"
    aria-modal="true"
    class="relative z-10 w-full max-w-md bg-white rounded-lg shadow-xl p-6 border border-gray-200"
    role="dialog"
  >
    <h2
      class="text-lg font-semibold mb-4"
      id="_r_2_"
    >
      Release funds
    </h2>
    <p
      class="text-sm text-gray-700 mb-6"
      id="_r_3_"
    >
      This action cannot be undone.
    </p>
    <div
      class="flex justify-end space-x-3"
    >
      <button
        class="px-4 py-2 rounded border border-gray-300 bg-white text-gray-700 hover:bg-gray-50 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-offset-2 focus-visible:ring-blue-500"
        type="button"
      >
        Cancel
      </button>
      <button
        class="px-4 py-2 rounded text-white focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-offset-2 bg-blue-600 hover:bg-blue-700 focus-visible:ring-blue-500"
        type="button"
      >
        Confirm
      </button>
    </div>
  </div>
</div>
`;

exports[`dialog rendered structure ContractCreationForm renders a deterministic error summary and inline errors for an invalid empty submission 1`] = `
<div
  aria-labelledby="create-contract-title"
  aria-modal="true"
  class="fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center p-4 z-50"
  role="dialog"
>
  <div
    class="bg-white rounded-3xl shadow-xl max-w-2xl w-full max-h-[90vh] overflow-y-auto p-6"
  >
    <h2
      class="text-2xl font-bold text-slate-900 mb-6"
      id="create-contract-title"
    >
      Create New Contract
    </h2>
    <form
      novalidate=""
    >
      <div
        aria-labelledby="error-summary-title"
        class="p-4 mb-6 border-l-4 border-red-500 bg-red-50 focus:outline-none focus:ring-2 focus:ring-red-500"
        role="alert"
        tabindex="-1"
      >
        <h2
          class="text-lg font-bold text-red-800"
          id="error-summary-title"
        >
          There is a problem
        </h2>
        <ul
          class="mt-2 space-y-1 list-inside text-sm text-red-700"
        >
          <li>
            <a
              class="font-medium underline hover:text-red-900 focus:text-red-900 transition-colors"
              href="#contractName"
            >
              Contract name is required
            </a>
          </li>
          <li>
            <a
              class="font-medium underline hover:text-red-900 focus:text-red-900 transition-colors"
              href="#totalValue"
            >
              Total value is required
            </a>
          </li>
          <li>
            <a
              class="font-medium underline hover:text-red-900 focus:text-red-900 transition-colors"
              href="#parties"
            >
              At least two parties are required
            </a>
          </li>
        </ul>
      </div>
      <div
        class="mb-4 w-full"
      >
        <label
          class="block text-sm font-medium text-gray-700 mb-1"
          for="contractName"
        >
          Contract Name
          <span
            aria-hidden="true"
            class="text-red-500 ml-1"
          >
            *
          </span>
        </label>
        <input
          aria-describedby="contractName-error"
          aria-invalid="true"
          aria-required="true"
          class="w-full rounded-lg border border-slate-300 px-3 py-2 focus:outline-none focus:ring-2 focus:ring-blue-500 border-red-500 focus:ring-red-500 focus:border-red-500"
          id="contractName"
          placeholder="e.g., Website Redesign Project"
          type="text"
          value=""
        />
        <p
          class="mt-1 text-sm text-red-600 font-medium"
          id="contractName-error"
          role="alert"
        >
          Contract name is required
        </p>
      </div>
      <div
        class="grid grid-cols-2 gap-4"
      >
        <div
          class="mb-4 w-full"
        >
          <label
            class="block text-sm font-medium text-gray-700 mb-1"
            for="totalValue"
          >
            Total Value
            <span
              aria-hidden="true"
              class="text-red-500 ml-1"
            >
              *
            </span>
          </label>
          <input
            aria-describedby="totalValue-error"
            aria-invalid="true"
            aria-required="true"
            class="w-full rounded-lg border border-slate-300 px-3 py-2 focus:outline-none focus:ring-2 focus:ring-blue-500 border-red-500 focus:ring-red-500 focus:border-red-500"
            id="totalValue"
            placeholder="e.g., 5000"
            type="text"
            value=""
          />
          <p
            class="mt-1 text-sm text-red-600 font-medium"
            id="totalValue-error"
            role="alert"
          >
            Total value is required
          </p>
        </div>
        <div
          class="mb-4 w-full"
        >
          <label
            class="block text-sm font-medium text-gray-700 mb-1"
            for="currency"
          >
            Currency
            <span
              aria-hidden="true"
              class="text-red-500 ml-1"
            >
              *
            </span>
          </label>
          <select
            aria-invalid="false"
            aria-required="true"
            class="w-full rounded-lg border border-slate-300 px-3 py-2 focus:outline-none focus:ring-2 focus:ring-blue-500"
            id="currency"
          >
            <option
              value="USD"
            >
              USD
            </option>
            <option
              value="EUR"
            >
              EUR
            </option>
            <option
              value="GBP"
            >
              GBP
            </option>
            <option
              value="XLM"
            >
              XLM
            </option>
          </select>
        </div>
      </div>
      <div
        class="mb-4"
      >
        <label
          class="block text-sm font-medium text-gray-700 mb-2"
        >
          Parties 
          <span
            aria-hidden="true"
            class="text-red-500 ml-1"
          >
            *
          </span>
        </label>
        <p
          class="mb-2 text-sm text-red-600 font-medium"
          id="parties-error"
          role="alert"
        >
          At least two parties are required
        </p>
        <div
          class="space-y-4"
        >
          <div
            class="p-4 border border-slate-200 rounded-lg"
          >
            <div
              class="flex justify-between items-center mb-3"
            >
              <h3
                class="text-sm font-semibold text-slate-700"
              >
                Party 
                1
              </h3>
            </div>
            <div
              class="mb-4 w-full"
            >
              <label
                class="block text-sm font-medium text-gray-700 mb-1"
                for="party-label-0"
              >
                Label
                <span
                  aria-hidden="true"
                  class="text-red-500 ml-1"
                >
                  *
                </span>
              </label>
              <input
                aria-invalid="false"
                aria-required="true"
                class="w-full rounded-lg border border-slate-300 px-3 py-2 focus:outline-none focus:ring-2 focus:ring-blue-500"
                id="party-label-0"
                placeholder="e.g., Client, Freelancer"
                type="text"
                value=""
              />
            </div>
            <div
              class="mb-4 w-full"
            >
              <label
                class="block text-sm font-medium text-gray-700 mb-1"
                for="party-address-0"
              >
                Stellar Address
                <span
                  aria-hidden="true"
                  class="text-red-500 ml-1"
                >
                  *
                </span>
              </label>
              <input
                aria-describedby="party-address-0-helper"
                aria-invalid="false"
                aria-required="true"
                class="w-full rounded-lg border border-slate-300 px-3 py-2 font-mono text-sm focus:outline-none focus:ring-2 focus:ring-blue-500"
                id="party-address-0"
                placeholder="GXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX"
                type="text"
                value=""
              />
              <p
                class="mt-1 text-sm text-gray-500"
                id="party-address-0-helper"
              >
                56-character address starting with G
              </p>
            </div>
          </div>
          <div
            class="p-4 border border-slate-200 rounded-lg"
          >
            <div
              class="flex justify-between items-center mb-3"
            >
              <h3
                class="text-sm font-semibold text-slate-700"
              >
                Party 
                2
              </h3>
            </div>
            <div
              class="mb-4 w-full"
            >
              <label
                class="block text-sm font-medium text-gray-700 mb-1"
                for="party-label-1"
              >
                Label
                <span
                  aria-hidden="true"
                  class="text-red-500 ml-1"
                >
                  *
                </span>
              </label>
              <input
                aria-invalid="false"
                aria-required="true"
                class="w-full rounded-lg border border-slate-300 px-3 py-2 focus:outline-none focus:ring-2 focus:ring-blue-500"
                id="party-label-1"
                placeholder="e.g., Client, Freelancer"
                type="text"
                value=""
              />
            </div>
            <div
              class="mb-4 w-full"
            >
              <label
                class="block text-sm font-medium text-gray-700 mb-1"
                for="party-address-1"
              >
                Stellar Address
                <span
                  aria-hidden="true"
                  class="text-red-500 ml-1"
                >
                  *
                </span>
              </label>
              <input
                aria-describedby="party-address-1-helper"
                aria-invalid="false"
                aria-required="true"
                class="w-full rounded-lg border border-slate-300 px-3 py-2 font-mono text-sm focus:outline-none focus:ring-2 focus:ring-blue-500"
                id="party-address-1"
                placeholder="GXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX"
                type="text"
                value=""
              />
              <p
                class="mt-1 text-sm text-gray-500"
                id="party-address-1-helper"
              >
                56-character address starting with G
              </p>
            </div>
          </div>
        </div>
        <button
          class="mt-3 text-blue-600 hover:text-blue-800 text-sm font-medium"
          type="button"
        >
          + Add Another Party
        </button>
      </div>
      <div
        class="flex gap-3 justify-end mt-6"
      >
        <button
          class="px-4 py-2 rounded-lg border border-slate-300 text-slate-700 hover:bg-slate-50 font-medium"
          type="button"
        >
          Cancel
        </button>
        <button
          class="px-4 py-2 rounded-lg bg-blue-600 text-white hover:bg-blue-700 font-medium"
          type="submit"
        >
          Create Contract
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`dialog rendered structure ContractCreationForm renders the empty creation form with its stable initial control structure 1`] = `
<div
  aria-labelledby="create-contract-title"
  aria-modal="true"
  class="fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center p-4 z-50"
  role="dialog"
>
  <div
    class="bg-white rounded-3xl shadow-xl max-w-2xl w-full max-h-[90vh] overflow-y-auto p-6"
  >
    <h2
      class="text-2xl font-bold text-slate-900 mb-6"
      id="create-contract-title"
    >
      Create New Contract
    </h2>
    <form
      novalidate=""
    >
      <div
        class="mb-4 w-full"
      >
        <label
          class="block text-sm font-medium text-gray-700 mb-1"
          for="contractName"
        >
          Contract Name
          <span
            aria-hidden="true"
            class="text-red-500 ml-1"
          >
            *
          </span>
        </label>
        <input
          aria-invalid="false"
          aria-required="true"
          class="w-full rounded-lg border border-slate-300 px-3 py-2 focus:outline-none focus:ring-2 focus:ring-blue-500"
          id="contractName"
          placeholder="e.g., Website Redesign Project"
          type="text"
          value=""
        />
      </div>
      <div
        class="grid grid-cols-2 gap-4"
      >
        <div
          class="mb-4 w-full"
        >
          <label
            class="block text-sm font-medium text-gray-700 mb-1"
            for="totalValue"
          >
            Total Value
            <span
              aria-hidden="true"
              class="text-red-500 ml-1"
            >
              *
            </span>
          </label>
          <input
            aria-invalid="false"
            aria-required="true"
            class="w-full rounded-lg border border-slate-300 px-3 py-2 focus:outline-none focus:ring-2 focus:ring-blue-500"
            id="totalValue"
            placeholder="e.g., 5000"
            type="text"
            value=""
          />
        </div>
        <div
          class="mb-4 w-full"
        >
          <label
            class="block text-sm font-medium text-gray-700 mb-1"
            for="currency"
          >
            Currency
            <span
              aria-hidden="true"
              class="text-red-500 ml-1"
            >
              *
            </span>
          </label>
          <select
            aria-invalid="false"
            aria-required="true"
            class="w-full rounded-lg border border-slate-300 px-3 py-2 focus:outline-none focus:ring-2 focus:ring-blue-500"
            id="currency"
          >
            <option
              value="USD"
            >
              USD
            </option>
            <option
              value="EUR"
            >
              EUR
            </option>
            <option
              value="GBP"
            >
              GBP
            </option>
            <option
              value="XLM"
            >
              XLM
            </option>
          </select>
        </div>
      </div>
      <div
        class="mb-4"
      >
        <label
          class="block text-sm font-medium text-gray-700 mb-2"
        >
          Parties 
          <span
            aria-hidden="true"
            class="text-red-500 ml-1"
          >
            *
          </span>
        </label>
        <div
          class="space-y-4"
        >
          <div
            class="p-4 border border-slate-200 rounded-lg"
          >
            <div
              class="flex justify-between items-center mb-3"
            >
              <h3
                class="text-sm font-semibold text-slate-700"
              >
                Party 
                1
              </h3>
            </div>
            <div
              class="mb-4 w-full"
            >
              <label
                class="block text-sm font-medium text-gray-700 mb-1"
                for="party-label-0"
              >
                Label
                <span
                  aria-hidden="true"
                  class="text-red-500 ml-1"
                >
                  *
                </span>
              </label>
              <input
                aria-invalid="false"
                aria-required="true"
                class="w-full rounded-lg border border-slate-300 px-3 py-2 focus:outline-none focus:ring-2 focus:ring-blue-500"
                id="party-label-0"
                placeholder="e.g., Client, Freelancer"
                type="text"
                value=""
              />
            </div>
            <div
              class="mb-4 w-full"
            >
              <label
                class="block text-sm font-medium text-gray-700 mb-1"
                for="party-address-0"
              >
                Stellar Address
                <span
                  aria-hidden="true"
                  class="text-red-500 ml-1"
                >
                  *
                </span>
              </label>
              <input
                aria-describedby="party-address-0-helper"
                aria-invalid="false"
                aria-required="true"
                class="w-full rounded-lg border border-slate-300 px-3 py-2 font-mono text-sm focus:outline-none focus:ring-2 focus:ring-blue-500"
                id="party-address-0"
                placeholder="GXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX"
                type="text"
                value=""
              />
              <p
                class="mt-1 text-sm text-gray-500"
                id="party-address-0-helper"
              >
                56-character address starting with G
              </p>
            </div>
          </div>
          <div
            class="p-4 border border-slate-200 rounded-lg"
          >
            <div
              class="flex justify-between items-center mb-3"
            >
              <h3
                class="text-sm font-semibold text-slate-700"
              >
                Party 
                2
              </h3>
            </div>
            <div
              class="mb-4 w-full"
            >
              <label
                class="block text-sm font-medium text-gray-700 mb-1"
                for="party-label-1"
              >
                Label
                <span
                  aria-hidden="true"
                  class="text-red-500 ml-1"
                >
                  *
                </span>
              </label>
              <input
                aria-invalid="false"
                aria-required="true"
                class="w-full rounded-lg border border-slate-300 px-3 py-2 focus:outline-none focus:ring-2 focus:ring-blue-500"
                id="party-label-1"
                placeholder="e.g., Client, Freelancer"
                type="text"
                value=""
              />
            </div>
            <div
              class="mb-4 w-full"
            >
              <label
                class="block text-sm font-medium text-gray-700 mb-1"
                for="party-address-1"
              >
                Stellar Address
                <span
                  aria-hidden="true"
                  class="text-red-500 ml-1"
                >
                  *
                </span>
              </label>
              <input
                aria-describedby="party-address-1-helper"
                aria-invalid="false"
                aria-required="true"
                class="w-full rounded-lg border border-slate-300 px-3 py-2 font-mono text-sm focus:outline-none focus:ring-2 focus:ring-blue-500"
                id="party-address-1"
                placeholder="GXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX"
                type="text"
                value=""
              />
              <p
                class="mt-1 text-sm text-gray-500"
                id="party-address-1-helper"
              >
                56-character address starting with G
              </p>
            </div>
          </div>
        </div>
        <button
          class="mt-3 text-blue-600 hover:text-blue-800 text-sm font-medium"
          type="button"
        >
          + Add Another Party
        </button>
      </div>
      <div
        class="flex gap-3 justify-end mt-6"
      >
        <button
          class="px-4 py-2 rounded-lg border border-slate-300 text-slate-700 hover:bg-slate-50 font-medium"
          type="button"
        >
          Cancel
        </button>
        <button
          class="px-4 py-2 rounded-lg bg-blue-600 text-white hover:bg-blue-700 font-medium"
          type="submit"
        >
          Create Contract
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`dialog rendered structure ContractCreationForm renders the loaded/populated state with user data 1`] = `
<div
  aria-labelledby="create-contract-title"
  aria-modal="true"
  class="fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center p-4 z-50"
  role="dialog"
>
  <div
    class="bg-white rounded-3xl shadow-xl max-w-2xl w-full max-h-[90vh] overflow-y-auto p-6"
  >
    <h2
      class="text-2xl font-bold text-slate-900 mb-6"
      id="create-contract-title"
    >
      Create New Contract
    </h2>
    <form
      novalidate=""
    >
      <div
        class="mb-4 w-full"
      >
        <label
          class="block text-sm font-medium text-gray-700 mb-1"
          for="contractName"
        >
          Contract Name
          <span
            aria-hidden="true"
            class="text-red-500 ml-1"
          >
            *
          </span>
        </label>
        <input
          aria-invalid="false"
          aria-required="true"
          class="w-full rounded-lg border border-slate-300 px-3 py-2 focus:outline-none focus:ring-2 focus:ring-blue-500"
          id="contractName"
          placeholder="e.g., Website Redesign Project"
          type="text"
          value="Design System Escrow"
        />
      </div>
      <div
        class="grid grid-cols-2 gap-4"
      >
        <div
          class="mb-4 w-full"
        >
          <label
            class="block text-sm font-medium text-gray-700 mb-1"
            for="totalValue"
          >
            Total Value
            <span
              aria-hidden="true"
              class="text-red-500 ml-1"
            >
              *
            </span>
          </label>
          <input
            aria-invalid="false"
            aria-required="true"
            class="w-full rounded-lg border border-slate-300 px-3 py-2 focus:outline-none focus:ring-2 focus:ring-blue-500"
            id="totalValue"
            placeholder="e.g., 5000"
            type="text"
            value="5000"
          />
        </div>
        <div
          class="mb-4 w-full"
        >
          <label
            class="block text-sm font-medium text-gray-700 mb-1"
            for="currency"
          >
            Currency
            <span
              aria-hidden="true"
              class="text-red-500 ml-1"
            >
              *
            </span>
          </label>
          <select
            aria-invalid="false"
            aria-required="true"
            class="w-full rounded-lg border border-slate-300 px-3 py-2 focus:outline-none focus:ring-2 focus:ring-blue-500"
            id="currency"
          >
            <option
              value="USD"
            >
              USD
            </option>
            <option
              value="EUR"
            >
              EUR
            </option>
            <option
              value="GBP"
            >
              GBP
            </option>
            <option
              value="XLM"
            >
              XLM
            </option>
          </select>
        </div>
      </div>
      <div
        class="mb-4"
      >
        <label
          class="block text-sm font-medium text-gray-700 mb-2"
        >
          Parties 
          <span
            aria-hidden="true"
            class="text-red-500 ml-1"
          >
            *
          </span>
        </label>
        <div
          class="space-y-4"
        >
          <div
            class="p-4 border border-slate-200 rounded-lg"
          >
            <div
              class="flex justify-between items-center mb-3"
            >
              <h3
                class="text-sm font-semibold text-slate-700"
              >
                Party 
                1
              </h3>
            </div>
            <div
              class="mb-4 w-full"
            >
              <label
                class="block text-sm font-medium text-gray-700 mb-1"
                for="party-label-0"
              >
                Label
                <span
                  aria-hidden="true"
                  class="text-red-500 ml-1"
                >
                  *
                </span>
              </label>
              <input
                aria-invalid="false"
                aria-required="true"
                class="w-full rounded-lg border border-slate-300 px-3 py-2 focus:outline-none focus:ring-2 focus:ring-blue-500"
                id="party-label-0"
                placeholder="e.g., Client, Freelancer"
                type="text"
                value=""
              />
            </div>
            <div
              class="mb-4 w-full"
            >
              <label
                class="block text-sm font-medium text-gray-700 mb-1"
                for="party-address-0"
              >
                Stellar Address
                <span
                  aria-hidden="true"
                  class="text-red-500 ml-1"
                >
                  *
                </span>
              </label>
              <input
                aria-describedby="party-address-0-helper"
                aria-invalid="false"
                aria-required="true"
                class="w-full rounded-lg border border-slate-300 px-3 py-2 font-mono text-sm focus:outline-none focus:ring-2 focus:ring-blue-500"
                id="party-address-0"
                placeholder="GXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX"
                type="text"
                value=""
              />
              <p
                class="mt-1 text-sm text-gray-500"
                id="party-address-0-helper"
              >
                56-character address starting with G
              </p>
            </div>
          </div>
          <div
            class="p-4 border border-slate-200 rounded-lg"
          >
            <div
              class="flex justify-between items-center mb-3"
            >
              <h3
                class="text-sm font-semibold text-slate-700"
              >
                Party 
                2
              </h3>
            </div>
            <div
              class="mb-4 w-full"
            >
              <label
                class="block text-sm font-medium text-gray-700 mb-1"
                for="party-label-1"
              >
                Label
                <span
                  aria-hidden="true"
                  class="text-red-500 ml-1"
                >
                  *
                </span>
              </label>
              <input
                aria-invalid="false"
                aria-required="true"
                class="w-full rounded-lg border border-slate-300 px-3 py-2 focus:outline-none focus:ring-2 focus:ring-blue-500"
                id="party-label-1"
                placeholder="e.g., Client, Freelancer"
                type="text"
                value=""
              />
            </div>
            <div
              class="mb-4 w-full"
            >
              <label
                class="block text-sm font-medium text-gray-700 mb-1"
                for="party-address-1"
              >
                Stellar Address
                <span
                  aria-hidden="true"
                  class="text-red-500 ml-1"
                >
                  *
                </span>
              </label>
              <input
                aria-describedby="party-address-1-helper"
                aria-invalid="false"
                aria-required="true"
                class="w-full rounded-lg border border-slate-300 px-3 py-2 font-mono text-sm focus:outline-none focus:ring-2 focus:ring-blue-500"
                id="party-address-1"
                placeholder="GXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX"
                type="text"
                value=""
              />
              <p
                class="mt-1 text-sm text-gray-500"
                id="party-address-1-helper"
              >
                56-character address starting with G
              </p>
            </div>
          </div>
        </div>
        <button
          class="mt-3 text-blue-600 hover:text-blue-800 text-sm font-medium"
          type="button"
        >
          + Add Another Party
        </button>
      </div>
      <div
        class="flex gap-3 justify-end mt-6"
      >
        <button
          class="px-4 py-2 rounded-lg border border-slate-300 text-slate-700 hover:bg-slate-50 font-medium"
          type="button"
        >
          Cancel
        </button>
        <button
          class="px-4 py-2 rounded-lg bg-blue-600 text-white hover:bg-blue-700 font-medium"
          type="submit"
        >
          Create Contract
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`dialog rendered structure MilestoneCreationForm renders a deterministic error summary and inline errors for an invalid empty submission 1`] = `
<div
  aria-labelledby="create-milestone-title"
  aria-modal="true"
  class="fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center p-4 z-50"
  role="dialog"
>
  <div
    class="bg-white rounded-3xl shadow-xl max-w-lg w-full max-h-[90vh] overflow-y-auto p-6"
  >
    <h2
      class="text-2xl font-bold text-slate-900 mb-6"
      id="create-milestone-title"
    >
      Add Milestone
    </h2>
    <form
      novalidate=""
    >
      <div
        aria-labelledby="error-summary-title"
        class="p-4 mb-6 border-l-4 border-red-500 bg-red-50 focus:outline-none focus:ring-2 focus:ring-red-500"
        role="alert"
        tabindex="-1"
      >
        <h2
          class="text-lg font-bold text-red-800"
          id="error-summary-title"
        >
          There is a problem
        </h2>
        <ul
          class="mt-2 space-y-1 list-inside text-sm text-red-700"
        >
          <li>
            <a
              class="font-medium underline hover:text-red-900 focus:text-red-900 transition-colors"
              href="#milestone-title"
            >
              Title is required
            </a>
          </li>
          <li>
            <a
              class="font-medium underline hover:text-red-900 focus:text-red-900 transition-colors"
              href="#milestone-payout"
            >
              Payout amount is required
            </a>
          </li>
        </ul>
      </div>
      <div
        class="mb-4 w-full"
      >
        <label
          class="block text-sm font-medium text-gray-700 mb-1"
          for="milestone-title"
        >
          Title
          <span
            aria-hidden="true"
            class="text-red-500 ml-1"
          >
            *
          </span>
        </label>
        <input
          aria-describedby="milestone-title-error"
          aria-invalid="true"
          aria-required="true"
          class="w-full rounded-lg border border-slate-300 px-3 py-2 focus:outline-none focus:ring-2 focus:ring-blue-500 border-red-500 focus:ring-red-500 focus:border-red-500"
          id="milestone-title"
          placeholder="e.g., Frontend Development – Sprint 1"
          type="text"
          value=""
        />
        <p
          class="mt-1 text-sm text-red-600 font-medium"
          id="milestone-title-error"
          role="alert"
        >
          Title is required
        </p>
      </div>
      <div
        class="grid grid-cols-2 gap-4"
      >
        <div
          class="mb-4 w-full"
        >
          <label
            class="block text-sm font-medium text-gray-700 mb-1"
            for="milestone-payout"
          >
            Payout Amount
            <span
              aria-hidden="true"
              class="text-red-500 ml-1"
            >
              *
            </span>
          </label>
          <input
            aria-describedby="milestone-payout-error"
            aria-invalid="true"
            aria-required="true"
            class="w-full rounded-lg border border-slate-300 px-3 py-2 focus:outline-none focus:ring-2 focus:ring-blue-500 border-red-500 focus:ring-red-500 focus:border-red-500"
            id="milestone-payout"
            inputmode="decimal"
            placeholder="e.g., 2500"
            type="text"
            value=""
          />
          <p
            class="mt-1 text-sm text-red-600 font-medium"
            id="milestone-payout-error"
            role="alert"
          >
            Payout amount is required
          </p>
        </div>
        <div
          class="mb-4 w-full"
        >
          <label
            class="block text-sm font-medium text-gray-700 mb-1"
            for="milestone-currency"
          >
            Currency
            <span
              aria-hidden="true"
              class="text-red-500 ml-1"
            >
              *
            </span>
          </label>
          <select
            aria-invalid="false"
            aria-required="true"
            class="w-full rounded-lg border border-slate-300 px-3 py-2 focus:outline-none focus:ring-2 focus:ring-blue-500"
            id="milestone-currency"
          >
            <option
              value="USD"
            >
              USD
            </option>
            <option
              value="EUR"
            >
              EUR
            </option>
            <option
              value="GBP"
            >
              GBP
            </option>
            <option
              value="XLM"
            >
              XLM
            </option>
          </select>
        </div>
      </div>
      <div
        class="mb-4 w-full"
      >
        <label
          class="block text-sm font-medium text-gray-700 mb-1"
          for="milestone-status"
        >
          Status
        </label>
        <select
          aria-invalid="false"
          class="w-full rounded-lg border border-slate-300 px-3 py-2 focus:outline-none focus:ring-2 focus:ring-blue-500"
          id="milestone-status"
        >
          <option
            value="Pending"
          >
            Pending
          </option>
          <option
            value="Active"
          >
            Active
          </option>
          <option
            value="Completed"
          >
            Completed
          </option>
          <option
            value="Paid"
          >
            Paid
          </option>
          <option
            value="Disputed"
          >
            Disputed
          </option>
        </select>
      </div>
      <div
        class="mb-4 w-full"
      >
        <label
          class="block text-sm font-medium text-gray-700 mb-1"
          for="milestone-dueDate"
        >
          Due Date
        </label>
        <input
          aria-describedby="milestone-dueDate-helper"
          aria-invalid="false"
          class="w-full rounded-lg border border-slate-300 px-3 py-2 focus:outline-none focus:ring-2 focus:ring-blue-500"
          id="milestone-dueDate"
          placeholder="Jun 1, 2025"
          type="text"
          value=""
        />
        <p
          class="mt-1 text-sm text-gray-500"
          id="milestone-dueDate-helper"
        >
          Optional — e.g., Jun 1, 2025
        </p>
      </div>
      <div
        class="flex gap-3 justify-end mt-6"
      >
        <button
          class="px-4 py-2 rounded-lg border border-slate-300 text-slate-700 hover:bg-slate-50 font-medium focus-visible:outline focus-visible:outline-4 focus-visible:outline-offset-2 focus-visible:outline-blue-500"
          type="button"
        >
          Cancel
        </button>
        <button
          class="px-4 py-2 rounded-lg bg-blue-600 text-white hover:bg-blue-700 font-medium focus-visible:outline focus-visible:outline-4 focus-visible:outline-offset-2 focus-visible:outline-blue-500"
          type="submit"
        >
          Add Milestone
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`dialog rendered structure MilestoneCreationForm renders the empty creation form with its stable initial control structure 1`] = `
<div
  aria-labelledby="create-milestone-title"
  aria-modal="true"
  class="fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center p-4 z-50"
  role="dialog"
>
  <div
    class="bg-white rounded-3xl shadow-xl max-w-lg w-full max-h-[90vh] overflow-y-auto p-6"
  >
    <h2
      class="text-2xl font-bold text-slate-900 mb-6"
      id="create-milestone-title"
    >
      Add Milestone
    </h2>
    <form
      novalidate=""
    >
      <div
        class="mb-4 w-full"
      >
        <label
          class="block text-sm font-medium text-gray-700 mb-1"
          for="milestone-title"
        >
          Title
          <span
            aria-hidden="true"
            class="text-red-500 ml-1"
          >
            *
          </span>
        </label>
        <input
          aria-invalid="false"
          aria-required="true"
          class="w-full rounded-lg border border-slate-300 px-3 py-2 focus:outline-none focus:ring-2 focus:ring-blue-500"
          id="milestone-title"
          placeholder="e.g., Frontend Development – Sprint 1"
          type="text"
          value=""
        />
      </div>
      <div
        class="grid grid-cols-2 gap-4"
      >
        <div
          class="mb-4 w-full"
        >
          <label
            class="block text-sm font-medium text-gray-700 mb-1"
            for="milestone-payout"
          >
            Payout Amount
            <span
              aria-hidden="true"
              class="text-red-500 ml-1"
            >
              *
            </span>
          </label>
          <input
            aria-invalid="false"
            aria-required="true"
            class="w-full rounded-lg border border-slate-300 px-3 py-2 focus:outline-none focus:ring-2 focus:ring-blue-500"
            id="milestone-payout"
            inputmode="decimal"
            placeholder="e.g., 2500"
            type="text"
            value=""
          />
        </div>
        <div
          class="mb-4 w-full"
        >
          <label
            class="block text-sm font-medium text-gray-700 mb-1"
            for="milestone-currency"
          >
            Currency
            <span
              aria-hidden="true"
              class="text-red-500 ml-1"
            >
              *
            </span>
          </label>
          <select
            aria-invalid="false"
            aria-required="true"
            class="w-full rounded-lg border border-slate-300 px-3 py-2 focus:outline-none focus:ring-2 focus:ring-blue-500"
            id="milestone-currency"
          >
            <option
              value="USD"
            >
              USD
            </option>
            <option
              value="EUR"
            >
              EUR
            </option>
            <option
              value="GBP"
            >
              GBP
            </option>
            <option
              value="XLM"
            >
              XLM
            </option>
          </select>
        </div>
      </div>
      <div
        class="mb-4 w-full"
      >
        <label
          class="block text-sm font-medium text-gray-700 mb-1"
          for="milestone-status"
        >
          Status
        </label>
        <select
          aria-invalid="false"
          class="w-full rounded-lg border border-slate-300 px-3 py-2 focus:outline-none focus:ring-2 focus:ring-blue-500"
          id="milestone-status"
        >
          <option
            value="Pending"
          >
            Pending
          </option>
          <option
            value="Active"
          >
            Active
          </option>
          <option
            value="Completed"
          >
            Completed
          </option>
          <option
            value="Paid"
          >
            Paid
          </option>
          <option
            value="Disputed"
          >
            Disputed
          </option>
        </select>
      </div>
      <div
        class="mb-4 w-full"
      >
        <label
          class="block text-sm font-medium text-gray-700 mb-1"
          for="milestone-dueDate"
        >
          Due Date
        </label>
        <input
          aria-describedby="milestone-dueDate-helper"
          aria-invalid="false"
          class="w-full rounded-lg border border-slate-300 px-3 py-2 focus:outline-none focus:ring-2 focus:ring-blue-500"
          id="milestone-dueDate"
          placeholder="Jun 1, 2025"
          type="text"
          value=""
        />
        <p
          class="mt-1 text-sm text-gray-500"
          id="milestone-dueDate-helper"
        >
          Optional — e.g., Jun 1, 2025
        </p>
      </div>
      <div
        class="flex gap-3 justify-end mt-6"
      >
        <button
          class="px-4 py-2 rounded-lg border border-slate-300 text-slate-700 hover:bg-slate-50 font-medium focus-visible:outline focus-visible:outline-4 focus-visible:outline-offset-2 focus-visible:outline-blue-500"
          type="button"
        >
          Cancel
        </button>
        <button
          class="px-4 py-2 rounded-lg bg-blue-600 text-white hover:bg-blue-700 font-medium focus-visible:outline focus-visible:outline-4 focus-visible:outline-offset-2 focus-visible:outline-blue-500"
          type="submit"
        >
          Add Milestone
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`dialog rendered structure MilestoneCreationForm renders the loaded/populated state with milestone data 1`] = `
<div
  aria-labelledby="create-milestone-title"
  aria-modal="true"
  class="fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center p-4 z-50"
  role="dialog"
>
  <div
    class="bg-white rounded-3xl shadow-xl max-w-lg w-full max-h-[90vh] overflow-y-auto p-6"
  >
    <h2
      class="text-2xl font-bold text-slate-900 mb-6"
      id="create-milestone-title"
    >
      Add Milestone
    </h2>
    <form
      novalidate=""
    >
      <div
        class="mb-4 w-full"
      >
        <label
          class="block text-sm font-medium text-gray-700 mb-1"
          for="milestone-title"
        >
          Title
          <span
            aria-hidden="true"
            class="text-red-500 ml-1"
          >
            *
          </span>
        </label>
        <input
          aria-invalid="false"
          aria-required="true"
          class="w-full rounded-lg border border-slate-300 px-3 py-2 focus:outline-none focus:ring-2 focus:ring-blue-500"
          id="milestone-title"
          placeholder="e.g., Frontend Development – Sprint 1"
          type="text"
          value="Initial Prototype"
        />
      </div>
      <div
        class="grid grid-cols-2 gap-4"
      >
        <div
          class="mb-4 w-full"
        >
          <label
            class="block text-sm font-medium text-gray-700 mb-1"
            for="milestone-payout"
          >
            Payout Amount
            <span
              aria-hidden="true"
              class="text-red-500 ml-1"
            >
              *
            </span>
          </label>
          <input
            aria-invalid="false"
            aria-required="true"
            class="w-full rounded-lg border border-slate-300 px-3 py-2 focus:outline-none focus:ring-2 focus:ring-blue-500"
            id="milestone-payout"
            inputmode="decimal"
            placeholder="e.g., 2500"
            type="text"
            value="1500"
          />
        </div>
        <div
          class="mb-4 w-full"
        >
          <label
            class="block text-sm font-medium text-gray-700 mb-1"
            for="milestone-currency"
          >
            Currency
            <span
              aria-hidden="true"
              class="text-red-500 ml-1"
            >
              *
            </span>
          </label>
          <select
            aria-invalid="false"
            aria-required="true"
            class="w-full rounded-lg border border-slate-300 px-3 py-2 focus:outline-none focus:ring-2 focus:ring-blue-500"
            id="milestone-currency"
          >
            <option
              value="USD"
            >
              USD
            </option>
            <option
              value="EUR"
            >
              EUR
            </option>
            <option
              value="GBP"
            >
              GBP
            </option>
            <option
              value="XLM"
            >
              XLM
            </option>
          </select>
        </div>
      </div>
      <div
        class="mb-4 w-full"
      >
        <label
          class="block text-sm font-medium text-gray-700 mb-1"
          for="milestone-status"
        >
          Status
        </label>
        <select
          aria-invalid="false"
          class="w-full rounded-lg border border-slate-300 px-3 py-2 focus:outline-none focus:ring-2 focus:ring-blue-500"
          id="milestone-status"
        >
          <option
            value="Pending"
          >
            Pending
          </option>
          <option
            value="Active"
          >
            Active
          </option>
          <option
            value="Completed"
          >
            Completed
          </option>
          <option
            value="Paid"
          >
            Paid
          </option>
          <option
            value="Disputed"
          >
            Disputed
          </option>
        </select>
      </div>
      <div
        class="mb-4 w-full"
      >
        <label
          class="block text-sm font-medium text-gray-700 mb-1"
          for="milestone-dueDate"
        >
          Due Date
        </label>
        <input
          aria-describedby="milestone-dueDate-helper"
          aria-invalid="false"
          class="w-full rounded-lg border border-slate-300 px-3 py-2 focus:outline-none focus:ring-2 focus:ring-blue-500"
          id="milestone-dueDate"
          placeholder="Jun 1, 2025"
          type="text"
          value=""
        />
        <p
          class="mt-1 text-sm text-gray-500"
          id="milestone-dueDate-helper"
        >
          Optional — e.g., Jun 1, 2025
        </p>
      </div>
      <div
        class="flex gap-3 justify-end mt-6"
      >
        <button
          class="px-4 py-2 rounded-lg border border-slate-300 text-slate-700 hover:bg-slate-50 font-medium focus-visible:outline focus-visible:outline-4 focus-visible:outline-offset-2 focus-visible:outline-blue-500"
          type="button"
        >
          Cancel
        </button>
        <button
          class="px-4 py-2 rounded-lg bg-blue-600 text-white hover:bg-blue-700 font-medium focus-visible:outline focus-visible:outline-4 focus-visible:outline-offset-2 focus-visible:outline-blue-500"
          type="submit"
        >
          Add Milestone
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`dialog rendered structure SettingsPanel renders no output while closed 1`] = `null`;

exports[`dialog rendered structure SettingsPanel renders the loaded settings dialog structure when open 1`] = `
<div
  class="fixed inset-0 z-50 flex justify-end overflow-hidden"
>
  <div
    class="absolute inset-0 bg-black/50 transition-opacity backdrop-blur-sm"
  />
  <div
    aria-labelledby="settings-panel-title"
    aria-modal="true"
    class="relative w-full max-w-md bg-[var(--background)] shadow-xl flex flex-col h-full border-l border-[var(--border)]"
    role="dialog"
    tabindex="-1"
  >
    <div
      class="flex items-center justify-between p-6 border-b border-[var(--border)]"
    >
      <h2
        class="text-xl font-bold text-[var(--foreground)]"
        id="settings-panel-title"
      >
        Settings
      </h2>
      <button
        aria-label="Close settings"
        class="p-2 rounded-full hover:bg-[var(--accent)] text-[var(--muted-foreground)] focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-[var(--primary)] focus-visible:ring-offset-2"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="w-6 h-6"
          fill="none"
          stroke="currentColor"
          viewBox="0 0 24 24"
        >
          <path
            d="M6 18L18 6M6 6l12 12"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
          />
        </svg>
      </button>
    </div>
    <div
      class="flex-1 overflow-y-auto p-6 space-y-8"
    >
      <section
        class="space-y-4"
      >
        <h3
          class="text-sm font-semibold text-[var(--muted-foreground)] uppercase tracking-wider"
        >
          Appearance
        </h3>
        <div
          class="space-y-4"
        >
          <div>
            <label
              class="block text-sm font-medium mb-2 text-[var(--foreground)]"
              id="theme-label"
            >
              Theme
            </label>
            <div
              aria-label="Theme"
              aria-labelledby="theme-label"
              class="grid grid-cols-3 gap-2"
              role="radiogroup"
            >
              <button
                aria-checked="false"
                class="px-3 py-2 text-sm rounded-md border transition-all focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-[var(--primary)] focus-visible:ring-offset-2 capitalize border-[var(--border)] bg-[var(--surface)] text-[var(--foreground)] hover:border-[var(--muted-foreground)]"
                role="radio"
                tabindex="-1"
              >
                light
              </button>
              <button
                aria-checked="false"
                class="px-3 py-2 text-sm rounded-md border transition-all focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-[var(--primary)] focus-visible:ring-offset-2 capitalize border-[var(--border)] bg-[var(--surface)] text-[var(--foreground)] hover:border-[var(--muted-foreground)]"
                role="radio"
                tabindex="-1"
              >
                dark
              </button>
              <button
                aria-checked="true"
                class="px-3 py-2 text-sm rounded-md border transition-all focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-[var(--primary)] focus-visible:ring-offset-2 capitalize border-[var(--primary)] bg-[var(--primary)] text-[var(--primary-foreground)]"
                role="radio"
                tabindex="0"
              >
                system
              </button>
            </div>
          </div>
          <div>
            <label
              class="block text-sm font-medium mb-2 text-[var(--foreground)]"
              id="currency-label"
            >
              Currency Display
            </label>
            <div
              aria-label="Currency Display"
              aria-labelledby="currency-label"
              class="grid grid-cols-3 gap-2"
              role="radiogroup"
            >
              <button
                aria-checked="true"
                class="px-3 py-2 text-sm rounded-md border transition-all focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-[var(--primary)] focus-visible:ring-offset-2 uppercase border-[var(--primary)] bg-[var(--primary)] text-[var(--primary-foreground)]"
                role="radio"
                tabindex="0"
              >
                usd
              </button>
              <button
                aria-checked="false"
                class="px-3 py-2 text-sm rounded-md border transition-all focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-[var(--primary)] focus-visible:ring-offset-2 uppercase border-[var(--border)] bg-[var(--surface)] text-[var(--foreground)] hover:border-[var(--muted-foreground)]"
                role="radio"
                tabindex="-1"
              >
                ngn
              </button>
              <button
                aria-checked="false"
                class="px-3 py-2 text-sm rounded-md border transition-all focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-[var(--primary)] focus-visible:ring-offset-2 uppercase border-[var(--border)] bg-[var(--surface)] text-[var(--foreground)] hover:border-[var(--muted-foreground)]"
                role="radio"
                tabindex="-1"
              >
                compact
              </button>
            </div>
          </div>
        </div>
      </section>
      <section
        class="space-y-4"
      >
        <h3
          class="text-sm font-semibold text-[var(--muted-foreground)] uppercase tracking-wider"
        >
          Notifications
        </h3>
        <div
          class="space-y-4"
        >
          <div>
            <label
              class="block text-sm font-medium mb-2 text-[var(--foreground)]"
              id="density-label"
            >
              Toast Density
            </label>
            <div
              aria-label="Toast Density"
              aria-labelledby="density-label"
              class="grid grid-cols-2 gap-2"
              role="radiogroup"
            >
              <button
                aria-checked="true"
                class="px-3 py-2 text-sm rounded-md border transition-all focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-[var(--primary)] focus-visible:ring-offset-2 capitalize border-[var(--primary)] bg-[var(--primary)] text-[var(--primary-foreground)]"
                role="radio"
                tabindex="0"
              >
                relaxed
              </button>
              <button
                aria-checked="false"
                class="px-3 py-2 text-sm rounded-md border transition-all focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-[var(--primary)] focus-visible:ring-offset-2 capitalize border-[var(--border)] bg-[var(--surface)] text-[var(--foreground)] hover:border-[var(--muted-foreground)]"
                role="radio"
                tabindex="-1"
              >
                compact
              </button>
            </div>
          </div>
          <div>
            <label
              class="block text-sm font-medium mb-2 text-[var(--foreground)]"
              id="form-density-label"
            >
              Form Density
            </label>
            <div
              aria-label="Form Density"
              aria-labelledby="form-density-label"
              class="grid grid-cols-2 gap-2"
              role="radiogroup"
            >
              <button
                aria-checked="true"
                class="px-3 py-2 text-sm rounded-md border capitalize transition-all focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-[var(--primary)] focus-visible:ring-offset-2 border-[var(--primary)] bg-[var(--primary)] text-[var(--primary-foreground)]"
                role="radio"
              >
                comfortable
              </button>
              <button
                aria-checked="false"
                class="px-3 py-2 text-sm rounded-md border capitalize transition-all focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-[var(--primary)] focus-visible:ring-offset-2 border-[var(--border)] bg-[var(--surface)] text-[var(--foreground)] hover:border-[var(--muted-foreground)]"
                role="radio"
              >
                compact
              </button>
            </div>
          </div>
          <div
            class="flex items-center justify-between"
          >
            <div>
              <label
                class="text-sm font-medium text-[var(--foreground)]"
                id="quiet-mode-label"
              >
                Quiet Mode
              </label>
              <p
                class="text-xs text-[var(--muted-foreground)]"
              >
                Suppress success notifications
              </p>
            </div>
            <button
              aria-checked="false"
              aria-labelledby="quiet-mode-label"
              class="relative inline-flex h-6 w-11 items-center rounded-full transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-[var(--primary)] focus-visible:ring-offset-2 bg-[var(--muted)]"
              role="switch"
            >
              <span
                class="inline-block h-4 w-4 transform rounded-full bg-white transition-transform translate-x-1"
              />
            </button>
          </div>
        </div>
      </section>
    </div>
    <div
      class="p-6 border-t border-[var(--border)] bg-[var(--surface)]"
    >
      <button
        class="w-full py-2 px-4 bg-[var(--primary)] text-[var(--primary-foreground)] rounded-md font-medium hover:opacity-90 transition-opacity focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-[var(--primary)] focus-visible:ring-offset-2"
      >
        Done
      </button>
    </div>
  </div>
</div>
`;
